# kumir

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
kumir/: __init__.py  fil_analyze.py  robot.py
